[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/RigidPlayer3.gd" type="Script" id=1]
[ext_resource path="res://Collision/PlayerBoxCollision.tres" type="Shape2D" id=2]
[ext_resource path="res://Sprites/box.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Scenes/PlayerMask.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/ColorChoices.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.1

[node name="Player" type="RigidBody2D"]
pause_mode = 1
physics_material_override = SubResource( 1 )
contacts_reported = 2
can_sleep = false
script = ExtResource( 1 )
color_sequence = [ Color( 1, 1, 1, 1 ), Color( 0, 1, 1, 1 ), Color( 1, 0, 1, 1 ), Color( 1, 1, 0, 1 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 4 )

[node name="CameraTween" type="Tween" parent="Camera2D"]

[node name="PlayerMask" parent="." instance=ExtResource( 5 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -37.5
margin_top = -37.5
margin_right = 37.5
margin_bottom = 37.5

[node name="ColorChoices" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="ColorChoices"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -60.0
margin_right = -60.0
margin_bottom = -60.0

[node name="GridContainer" type="GridContainer" parent="ColorChoices/CenterContainer"]
pause_mode = 2
visible = false
focus_mode = 2
columns = 2
script = ExtResource( 6 )
[connection signal="hide" from="ColorChoices/CenterContainer/GridContainer" to="." method="color_popup_closed"]
[connection signal="show" from="ColorChoices/CenterContainer/GridContainer" to="." method="color_popup_opened"]
